     systemd watchdog situation once, will not spam more about it" even if
     those "logged" messages were at an invisible verbosity level. [issue #3157,
     PR #3151]
   * Revised detection of (relative) paths to program and configuration files
     near the currently running program in NUT for Windows builds. [issues #3207,
     #3063, #3065, #3219]

 - `asem`, `bestfortress`, `bestuferrups`, `bicker_ser`, `everups`, `metasys`,
   `masterguard`, `mge-utalk`, `oneac`, `phoenixcontact_modbus`, `pijuice`,
   `powercom`, `powervar_cx_ser`, `usbhid-ups`, `victronups` driver updates:
   * Moved code to align with NUT driver architecture, so `upsdrv_initups()`
     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]

 - `apcupsd-ups` driver updates:
   * Abandoned use of obsolete `gethostbyname()` in favour of `getaddrinfo()`.
     Extended to be IPv6-capable along the way. [#1209]

 - Introduced a new NUT driver named `meanwell_ntu` which provides support for
   the Mean Well NTU series hybrid inverter and UPS units. [PR #3206]

 - Introduced a new NUT driver named `must_ep2000pro` which provides support
   for the MUST EP2000Pro compatible, line-interactive UPS models which talk
   serial-protocol modbus protocol. [PR #3228]

 - `nhs_ser` driver updates:
   * Driver source code includes a table to map baud rates (defined by the OS
     as C macros) to numbers and strings more useful to the driver program.
     It was discovered that not all operating systems define all the baud rates
     referenced by this table, so now several higher speeds would be compiled
     conditionally. [issue #3163]

 - `nutdrv_qx` driver updates:
   * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing